--- a/Project_PDF_AI.ipynb
+++ b/Project_PDF_AI.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMEdwAimpbZXrZFygBVOwJx",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/vsampp/Project_Sumarize_PDF/blob/main/Project_PDF_AI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "IwQMJapBd7dc"
       },
@@ -49,6 +33,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zC4CRtoxm0pL"
+      },
+      "outputs": [],
       "source": [
         "# *****************************************************************************\n",
         "# IMPORTS LIBRARY, SDKs, ADK AND FRAMEWORKS\n",
@@ -68,15 +57,15 @@
         "import PyPDF2 as pdf # For read PDF\n",
         "\n",
         "warnings.filterwarnings(\"ignore\")"
-      ],
-      "metadata": {
-        "id": "zC4CRtoxm0pL"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vvHd5oIfiozk"
+      },
+      "outputs": [],
       "source": [
         "# *****************************************************************************\n",
         "# FUNCTIONS\n",
@@ -103,29 +92,29 @@
         "              final_response += part.text\n",
         "              final_response += \"\\n\"\n",
         "    return final_response"
-      ],
-      "metadata": {
-        "id": "vvHd5oIfiozk"
-      },
-      "execution_count": 30,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ExqW4DP6orBJ"
+      },
+      "outputs": [],
       "source": [
         "# Function for text formart Markdown\n",
         "def to_markdown(text):\n",
         "  text = text.replace('•', '  *')\n",
         "  return Markdown(textwrap.indent(text, '> ', predicate=lambda _: True))"
-      ],
-      "metadata": {
-        "id": "ExqW4DP6orBJ"
-      },
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "S26Cm8Tto0wp"
+      },
+      "outputs": [],
       "source": [
         "# Function for read PDF in Python with PyPDF2\n",
         "def read_pdf(file_path):\n",
@@ -165,42 +154,42 @@
         "            return None\n",
         "    else:\n",
         "        return None"
-      ],
-      "metadata": {
-        "id": "S26Cm8Tto0wp"
-      },
-      "execution_count": 29,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Setting API Key do Google Gemini\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "HeSoLBThfrpC"
       },
-      "execution_count": 23,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Setting API Key do Google Gemini\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "pDtUAwStg2qP"
+      },
+      "outputs": [],
       "source": [
         "# Create Client SDK\n",
         "clientSDK = genai.Client()\n",
         "\n",
         "# Define Gemini Model\n",
         "MODEL_ID = \"gemini-2.0-flash\""
-      ],
-      "metadata": {
-        "id": "pDtUAwStg2qP"
-      },
-      "execution_count": 24,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wtfsrQHHj80m"
+      },
+      "outputs": [],
       "source": [
         "# Define prompts\n",
         "few_shot_prompt=\"\"\"\n",
@@ -256,65 +245,51 @@
         "[Um parágrafo final sintetizando as conclusões mais importantes do documento e suas possíveis implicações ou recomendações.]\n",
         "\n",
         "\"\"\"\n"
-      ],
-      "metadata": {
-        "id": "wtfsrQHHj80m"
-      },
-      "execution_count": 25,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result = process_pdf_with_gemini(\"/content/Artificial intelligence act and regulatory sandboxes.pdf\", few_shot_prompt)"
-      ],
-      "metadata": {
-        "id": "t4fTIK-nmldb"
-      },
-      "execution_count": 26,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "to_markdown(result)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "67TKre7Vlnkn",
-        "outputId": "91d9f4ad-877f-4e29-e4a0-0b2c6c19d9cf"
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Markdown object>"
-            ],
-            "text/markdown": "> ### Resumo Detalhado do Documento: Artificial Intelligence Act and Regulatory Sandboxes\n> \n> **1. Introdução e Contexto Geral:**\n> Este briefing do Serviço de Pesquisa do Parlamento Europeu (EPRS) discute a proposta de Lei de Inteligência Artificial (IA) da Comissão Europeia e, especificamente, o conceito de \"sandboxes regulatórias\" de IA. O documento explora o que são sandboxes regulatórias, seus benefícios potenciais, preocupações levantadas por stakeholders e as principais questões de política em torno de sua implementação no contexto da legislação da UE sobre IA.\n> \n> **2. Principais Seções/Capítulos e Tópicos Abordados:**\n> \n> * **O que são Sandboxes Regulatórias?**\n>     * **Conceito Geral:** Sandboxes regulatórias são ferramentas que permitem às empresas testar e experimentar produtos, serviços ou modelos de negócios inovadores sob a supervisão de um regulador, durante um período limitado.\n>     * **Duplo Papel:** Elas facilitam tanto o aprendizado dos negócios (desenvolvimento e teste de inovações em ambientes reais) quanto o aprendizado regulatório (formulação de regimes legais experimentais para apoiar a inovação sob supervisão).\n>     * **Aplicações:** As sandboxes têm ganhado popularidade na UE para tecnologias emergentes como IA e blockchain, em setores como finanças (fintech), transporte (carros autônomos), energia (smart meters), telecomunicações (5G) e saúde (detecção precoce de doenças).\n>     * **Exemplo:** Sandboxes financeiras permitem testar carteiras digitais e tecnologias de identificação digital.\n> \n> * **Benefícios Esperados e Preocupações:**\n>     * **Benefícios:**\n>         * **Melhor Compreensão para Reguladores:** Permite que os reguladores entendam melhor os produtos inovadores e desenvolvam políticas adequadas de regulamentação, supervisão e fiscalização.\n>         * **Conformidade para Inovadores:** Ajuda os inovadores a desenvolverem produtos e serviços em conformidade com as regulamentações, evitando riscos legais e mitigando consequências não intencionais.\n>         * **Benefícios para Consumidores:** Promove a inovação e a escolha do consumidor a longo prazo, com a introdução de produtos potencialmente mais seguros.\n>         * **Exemplo:** No setor bancário, a sandbox pode levar à alteração das regras de verificação de identidade sem reuniões presenciais.\n>     * **Preocupações:**\n>         * **Uso Indevido e Arbitragem Regulatória:** Reguladores podem diminuir salvaguardas para atrair inovadores, levando a uma \"corrida para o fundo\" em proteção ao consumidor.\n>         * **Priorização da Inovação em Detrimento da Proteção:** Reguladores podem priorizar a inovação sobre a proteção do público e consumidores, com potenciais desvios das regras de proteção de dados.\n>         * **Interferência na Inovação Genuína:** Escolhas dos reguladores podem interferir ou desacelerar a inovação proveniente de atores privados.\n>         * **Fragmentação do Mercado Único:** Divergências significativas nos parâmetros de teste entre os Estados-Membros podem fragmentar o mercado único da UE.\n> \n> * **Proposta de Lei de IA da Comissão Europeia:**\n>     * **Propósito:** Introduz o conceito de \"sandboxes regulatórias de IA\" como medidas específicas de apoio à inovação (artigos 53 e 54). O objetivo é fomentar a inovação em IA, estabelecendo um ambiente controlado de experimentação e teste para tecnologias, produtos e serviços de IA inovadores durante a fase de desenvolvimento.\n>     * **Governança e Supervisão:** Incentiva os Estados-Membros a criar sandboxes de IA coordenadas a nível nacional, estabelecendo regras comuns para garantir uma implementação uniforme em toda a UE. A supervisão é feita pelas autoridades competentes nacionais, com poderes de mitigação e suspensão em caso de riscos à saúde, segurança e direitos fundamentais.\n>     * **Isenção de Responsabilidade:** A participação na sandbox não isenta os participantes da responsabilidade por danos causados a terceiros resultantes da experimentação.\n>     * **PMEs:** Prioridade de acesso a sandboxes para pequenas e médias empresas (PMEs) e startups, com aplicação proporcional das regras, permitindo experimentação sob as novas e existentes estruturas legais.\n>     * **Proteção de Dados:** Busca esclarecer a interação entre as novas regras horizontais da IA e as regras de proteção de dados aplicáveis. Exige a associação das autoridades nacionais de proteção de dados à operação das sandboxes.\n> \n> * **Principais Questões de Política para Discussão:**\n>     * **Proteção de Responsabilidade:** A ausência de isenção de responsabilidade para participantes pode desencorajar a participação, por expor segredos comerciais e designs de algoritmos sem benefícios de suspensão de responsabilidade.\n>     * **Harmonização:** O caráter opcional da sandbox pode levar a diferentes estruturas e regras em toda a UE, com risco de \"forum-shopping\" e proliferação de sandboxes com remissões sobrepostas.\n>     * **Proteção de Dados:** Preocupações de que as regras de proteção de dados possam não estar totalmente alinhadas com o \"princípio de limitação de propósito\" do Regulamento Geral de Proteção de Dados (GDPR), em particular quanto ao reuso de dados.\n> \n> * **Iniciativas da Comissão Relacionadas:**\n>     * O programa Digital Europe 2021–2027 prevê o estabelecimento de instalações de teste e experimentação de referência em larga escala (TEFs) na UE, para apoiar sandboxes regulatórias de IA por meio de suporte técnico e instalações de teste. As TEFs podem ajudar a desenvolver códigos de conduta para fomentar a aplicação voluntária dos requisitos da lei de IA pela indústria e administrações públicas.\n> \n> **3. Conclusões Principais e Implicações:**\n> O documento destaca a importância das sandboxes regulatórias de IA como ferramentas para promover a inovação e o desenvolvimento responsável da IA na UE. No entanto, ressalta a necessidade de abordar questões críticas como a proteção de responsabilidade, a harmonização das regras e a proteção de dados para garantir que as sandboxes sejam eficazes, seguras e alinhadas com os valores e regulamentos da UE. A implementação bem-sucedida das sandboxes de IA pode impulsionar a competitividade da Europa no campo da IA, ao mesmo tempo em que protege os direitos e interesses dos cidadãos.\n"
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%pip install -q streamlit"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "N5HQArinpt-L"
       },
-      "execution_count": 33,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%pip install -q streamlit"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rK3EzWbap-Gv",
+        "outputId": "71ff2a9e-6f4f-4a42-b051-fd4c595fe64c"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-05-21 03:15:03.677 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.680 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.682 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.684 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.686 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.687 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.689 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.690 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.691 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.693 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.694 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.695 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.697 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2025-05-21 03:15:03.698 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+          ]
+        }
+      ],
       "source": [
         "# --- Interface Streamlit ---\n",
         "\n",
@@ -387,46 +362,32 @@
         "              st.markdown(summary_result)\n",
         "          else:\n",
         "              st.error(\"Não foi possível gerar a sumarização.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rK3EzWbap-Gv",
-        "outputId": "71ff2a9e-6f4f-4a42-b051-fd4c595fe64c"
-      },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "2025-05-21 03:15:03.677 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.680 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.682 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.684 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.686 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.687 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.689 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.690 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.691 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.693 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.694 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.695 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.697 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-05-21 03:15:03.698 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "4J6qADrdqGap"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMEdwAimpbZXrZFygBVOwJx",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
